methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:24: error: not found: value color
  ligne1 (color.RED, color.BLUE);
          ^PatternPicture:24: error: not found: value color
  ligne1 (color.RED, color.BLUE);
                     ^